[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/start/main_menu.png" type="Texture" id=1]
[ext_resource path="res://ui/start/StartMenu.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[node name="StartMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 32
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 148.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 96.0
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 288.0
margin_bottom = 132.0
custom_constants/separation = 16
alignment = 1

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_left = 80.0
margin_right = 112.0
margin_bottom = 32.0
texture_normal = SubResource( 1 )
stretch_mode = 3

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
texture_normal = SubResource( 2 )
stretch_mode = 3

[node name="ExitButton" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_left = 176.0
margin_right = 208.0
margin_bottom = 32.0
texture_normal = SubResource( 3 )
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
